WCAG small fixes with overlapping elements

--- a/react/assets/forus-webshop/scss/goereeoverflakkee/sections/faq.scss
+++ b/react/assets/forus-webshop/scss/goereeoverflakkee/sections/faq.scss
@@ -4,7 +4,7 @@
         margin-right: auto;
     }
 
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 1200px) {
         &.section-faq {
             margin-right: 0;
         }
